--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "node-example",
-  "version": "0.0.1",
-  "dependencies": {
+  "name": "eye-reader",
+  "version": "1.0.0",
+  "description": "Backend for the eyeReader Mobile App.",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
   },
-  "engines": {
-    "node": "0.6.x"
+  "author": "Marios Kelepeshis",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.2"
   }
 }
