--- a/Mobile_App/package.json
+++ b/Mobile_App/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eyeReader",
   "version": "0.0.1",
-  "description": "An Ionic project",
+  "description": "",
   "devDependencies": {
     "gulp": "^3.5.6",
     "gulp-clean-css": "^3.7.0",
