--- a/Mobile_App/package.json
+++ b/Mobile_App/package.json
@@ -13,10 +13,11 @@
     "chart.js": "^2.7.2",
     "cordova-android": "^6.2.2",
     "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-fullscreen": "^1.2.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^4.1.0",
-    "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-plugin-keyboard": "^2.2.1",
     "node-sass": "^2.1.1"
@@ -29,7 +30,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-fullscreen": {}
     },
     "platforms": [
       "android"
